fix alignment for close dialog button

--- a/styles/common-template-m.css
+++ b/styles/common-template-m.css
@@ -1435,7 +1435,6 @@ section[id^="view"] {
 
 .closeDialogBtn > * {
   position: absolute;
-  top: -3px;
   left: 4px;
   font-size: 20px;
   color: white;
